# Pre_Epidemic

./: CMakeLists.txt  main.cpp  readme.md
Header/: Application.h
Header/Data/: BackLog.h  Materials.h  Operate_Database.h  Pre_user.h  UserData.h
Header/GUI/: AdminWindow.h  ClientWindow.h  LoginWindow.h  MainWindow.h  MyLabelOnly_DoubleClicked.h  MySwitchButton.h  MySwitch_Icon.h  TextEDit_DoubleClickable.h
Header/GUI/Panel/: Panel_1.h  Panel_2.h  Panel_3.h  Panel_4.h  Panel_5.h  Panel_6.h
Header/GUI/prevent/: Appointment.h  Clarify.h  Pre_Base.h  Report.h
Header/Role/: Admin.h  Doctor.h  User.h
Sources/: Application.cpp
Sources/Data/: BackLog.cpp  Materials.cpp  Operate_Database.cpp  UserData.cpp
Sources/GUI/: AdminWindow.cpp  ClientWindow.cpp  LoginWindow.cpp  MainWindow.cpp  MySwitchButton.cpp
Sources/GUI/Panel/: Panel_1.cpp  Panel_2.cpp  Panel_3.cpp  Panel_4.cpp  Panel_5.cpp  Panel_6.cpp
Sources/GUI/prevent/: Appointment.cpp  Clarify.cpp  Pre_Base.cpp  Report.cpp
Sources/Role/: Admin.cpp  Doctor.cpp  User.cpp
